--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "next": "^15.5.9",
     "next-auth": "^4.24.13",
     "react": "^19.2.3",
-    "react-dom": "^19.2.3"
+    "react-dom": "^19.2.3",
+    "react-hook-form": "^7.69.0"
   }
 }
