--- a/env.sample
+++ b/env.sample
@@ -1,2 +1,4 @@
 NEXTAUTH_URL=http://localhost:3000
 NEXTAUTH_SECRET=super-secret-key
+DATABASE_URL=file:./prisma/dev.db
+NEXTAUTH_URL=https://nextjs-prisma-app.up.railway.app
