--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "prisma generate && prisma migrate deploy && next build",
-    "start": "next start"
+    "start": "next start -p $PORT"
   },
   "devDependencies": {
     "@types/bcrypt": "^6.0.0",
